--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,8 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing:border-box ;
-    font-family: 'roboto',sans-serif;
+    box-sizing: border-box;
+    font-family: 'roboto', sans-serif;
 }
 
 .navbar{
@@ -10,7 +10,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 120px;
     background: #f5f5f5;
     z-index: 9;
 }
@@ -22,7 +21,7 @@
 }
 
 .brand-logo{
-    height: 60px;  
+    height: 60px;
 }
 
 .nav-items{
@@ -43,7 +42,7 @@
     border-bottom-left-radius: 10px;
     border: 1px solid #d1d1d1;
     text-transform: capitalize;
-    background : none;
+    background: none;
     color: #a9a9a9;
     outline: none;
 }
@@ -63,18 +62,16 @@
     border-bottom-right-radius: 10px;
 }
 
-.search-box:placeholder{
+.search-box::placeholder{
     color: #a9a9a9;
 }
 
 .nav-items a{
     margin-left: 20px;
-
 }
 
 .nav-items a img{
     width: 30px;
-
 }
 
 .links-container{
