--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: #f5f5f5;
+    background:grey;
     z-index: 9;
 }
 
@@ -21,7 +21,7 @@
 }
 
 .brand-logo{
-    height: 60px;
+    height: 200px;
 }
 
 .nav-items{
